# webtronics

./: .gitignore  README.md
endpoint/: README.md  pyproject.toml  requirements.txt
endpoint/app/: main.py
social_network/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
social_network/app/: config.py  main.py
